# Lab5OS

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client_main.cpp  pipe_client.cpp  pipe_client.h
common/: CMakeLists.txt  employee.h  protocol.h  winapi_utils.cpp  winapi_utils.h
server/: CMakeLists.txt  employee_storage.cpp  employee_storage.h  pipe_server.cpp  pipe_server.h  server_main.cpp
tests/: CMakeLists.txt  test_concurrency.cpp  test_employee_storage.cpp  test_protocol.cpp  test_validation.cpp
